# SomethingTodo

./: .gitignore  README.md
htmx-python-todo/: pyproject.toml
htmx-python-todo/htmx_python_todo/: crud.py  db.py  main.py  models.py  schema.sql
htmx-python-todo/htmx_python_todo/db/: create.sql  db.py  seed.py
htmx-python-todo/templates/: index.html  listItems.html
htmx-python-todo/tests/: test_crud.py  test_db.py
react-api/: TODO_DATABASE.db  package-lock.json  package.json  router.ts  server.ts
react-api/db/: crud.test.ts  crud.ts  db.test.ts  db.ts  seed.ts
react-api/models/: TodoItem.ts
react-api/modules/: create.test.ts  create.ts  delete.test.ts  delete.ts  readAll.test.ts  readAll.ts  update.test.ts  update.ts
react-todo/: package-lock.json  package.json  tailwind.config.js
react-todo/src/: index.tsx
react-todo/src/todo/: TodoCTA.test.tsx  TodoCTA.tsx  TodoList.test.tsx  TodoList.tsx  TodoPage.test.tsx  TodoPage.tsx  api.ts  useTodoList.test.ts  useTodoList.ts
