[tool.poe]
poetry_command = ""

[tool.poe.tasks]
serve = "uvicorn htmx_python_todo.main:app --reload"
seed = "htmx_python_todo.seed:seed"

[tool.poetry]
name = "htmx-python-todo"
version = "0.1.0"
description = "An example todo app using htmx and python"
authors = ["josiah <josiah@appstack.nyc>"]
readme = "README.md"
packages = [{ include = "htmx_python_todo" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.scripts]
serve = "htmx_python_todo.main:main"
seed = "htmx_python_todo.db.seed:seed"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
